y.output
   0  $accept : program $end

   1  program : MAIN LP RP option_nl LBRACE stmt_list RBRACE option_nl
   2          | error NL

   3  option_nl :
   4            | NL option_nl

   5  stmt_list : stmt
   6            | stmt stmt_list

   7  stmt : matched
   8       | unmatched
   9       | error NL

  10  matched : IF LP boolean_list RP option_nl matched ELSE option_nl matched
  11          | non_if_stmt

  12  unmatched : IF LP boolean_list RP option_nl stmt
  13            | IF LP boolean_list RP option_nl matched ELSE option_nl unmatched

  14  non_if_stmt : decrement_expr
  15              | increment_expr
  16              | SINGLE_LINE_COMMENT
  17              | declaration_expr
  18              | return_expr
  19              | assignment_expr
  20              | loop_expr
  21              | define_fcn
  22              | fcn_call_expr
  23              | primitive_function_expr
  24              | NL

  25  decrement_expr : decrement_operation SEMICOLON

  26  decrement_operation : IDENTIFIER DECREMENT_OP
  27                      | DECREMENT_OP IDENTIFIER

  28  increment_expr : increment_operation SEMICOLON

  29  increment_operation : IDENTIFIER INCREMENT_OP
  30                      | INCREMENT_OP IDENTIFIER

  31  define_fcn : FUNCTION_DEF fcn_return_type fcn_name LP param_list RP option_nl LBRACE stmt_list RBRACE

  32  param_list :
  33             | var_type IDENTIFIER
  34             | var_type IDENTIFIER COMMA param_list

  35  fcn_return_type : var_type
  36                  | VOID

  37  loop_expr : while_loop
  38            | do_while_loop
  39            | for_loop

  40  while_loop : WHILE option_nl LP boolean_list RP option_nl LBRACE stmt_list RBRACE

  41  do_while_loop : DO option_nl LBRACE stmt_list RBRACE option_nl WHILE option_nl LP boolean_list RP SEMICOLON

  42  for_loop : FOR option_nl LP for_expr RP option_nl LBRACE stmt_list RBRACE

  43  for_expr : for_init SEMICOLON boolean_list SEMICOLON for_update

  44  for_init : var_type assignment_expr_no_sc
  45           | assignment_expr_no_sc

  46  for_update : math_stmt
  47             | assignment_expr_no_sc
  48             | decrement_operation
  49             | increment_operation

  50  declaration_expr : var_type IDENTIFIER SEMICOLON
  51                   | var_type assignment_expr

  52  assignment_expr : assignment_expr_no_sc SEMICOLON

  53  assignment_expr_no_sc : IDENTIFIER ASSIGN_OP assignment_operand

  54  assignment_operand : str_stmt_return
  55                     | SWITCH_IDENTIFIER
  56                     | boolean_list

  57  boolean_list : boolean_list OR_OP and_term
  58               | and_term

  59  and_term : and_term AND_OP boolean_factor
  60           | boolean_factor

  61  boolean_factor : boolean_expr
  62                 | boolean_no_math

  63  boolean_no_math : NEGATION_OP boolean_no_math
  64                  | LP boolean_list OR_OP and_term RP
  65                  | LP and_term AND_OP boolean_factor RP
  66                  | LP boolean_literal RP
  67                  | LP NEGATION_OP boolean_expr RP
  68                  | LP num_compr_expr RP
  69                  | LP string_compr_expr RP
  70                  | LP boolean_no_math RP

  71  boolean_expr : boolean_literal
  72               | NEGATION_OP boolean_expr
  73               | num_compr_expr
  74               | num_comparable
  75               | string_compr_expr

  76  num_compr_expr : num_comparable comparator_operator num_comparable

  77  string_compr_expr : str_stmt equal_or_not_operator str_stmt

  78  comparator_operator : GREATER_OP
  79                      | LESS_OP
  80                      | GREAT_OR_EQUAL_OP
  81                      | LESS_OR_EQUAL_OP
  82                      | EQUALITY_OP
  83                      | NOT_EQUALITY_OP

  84  equal_or_not_operator : STR_EQUALITY_OP
  85                        | STR_NOT_EQUALITY_OP

  86  var_type : INT_TYPE
  87           | CHAR_TYPE
  88           | STRING_TYPE
  89           | CONNECTION_TYPE
  90           | BOOLEAN_TYPE
  91           | TIMESTAMP_TYPE
  92           | DOUBLE_TYPE

  93  boolean_literal : TRUE_LITERAL
  94                  | FALSE_LITERAL

  95  return_expr : RETURN return_stmt SEMICOLON

  96  return_stmt :
  97              | str_stmt_return
  98              | num_comparable

  99  str_stmt : STRING
 100           | IDENTIFIER
 101           | STRING CONCAT_OP str_stmt
 102           | IDENTIFIER CONCAT_OP str_stmt

 103  str_stmt_return : STRING
 104                  | STRING CONCAT_OP str_stmt
 105                  | IDENTIFIER CONCAT_OP str_stmt

 106  num_comparable : CHAR
 107                 | math_stmt

 108  math_stmt : math_stmt PLUS_OP term
 109            | math_stmt MINUS_OP term
 110            | term

 111  fcn_call_expr : fcn_call SEMICOLON

 112  primitive_function_expr : primitive_functions SEMICOLON

 113  term : power
 114       | term MULT_OP power
 115       | term DIV_OP power
 116       | term MODULO_OP power

 117  power : power POWER_OP factor
 118        | factor

 119  factor : INTEGER
 120         | DOUBLE
 121         | IDENTIFIER
 122         | fcn_call
 123         | primitive_functions
 124         | LP math_stmt RP

 125  param_list_no_type :
 126                     | IDENTIFIER
 127                     | IDENTIFIER COMMA param_list_no_type

 128  fcn_name : IDENTIFIER

 129  fcn_call : fcn_name LP param_list_no_type RP

 130  primitive_functions : get_timestamp
 131                      | get_temperature
 132                      | get_humidity
 133                      | get_air_pressure
 134                      | get_air_quality
 135                      | get_light
 136                      | get_sound_level
 137                      | send
 138                      | read
 139                      | establish_connection

 140  get_timestamp : TIMESTAMP_PF LP RP

 141  get_temperature : TEMPERATURE_PF LP RP

 142  get_humidity : HUMIDITY_PF LP RP

 143  get_air_pressure : AIR_PRESSURE_PF LP RP

 144  get_air_quality : AIR_QUALITY_PF LP RP

 145  get_light : LIGHT_PF LP RP

 146  get_sound_level : SOUND_LEVEL_PF LP frequency RP

 147  send : IDENTIFIER DOT SEND_PF LP send_item RP
 148       | establish_connection DOT SEND_PF LP send_item RP

 149  read : IDENTIFIER DOT READ_PF LP RP
 150       | establish_connection DOT READ_PF LP RP

 151  establish_connection : ESTABLISH_CONN_PF LP str_stmt RP

 152  send_item : INTEGER
 153            | IDENTIFIER

 154  frequency : IDENTIFIER
 155            | DOUBLE

state 0
	$accept : . program $end  (0)

	error  shift 1
	MAIN  shift 2
	.  error

	program  goto 3


state 1
	program : error . NL  (2)

	NL  shift 4
	.  error


state 2
	program : MAIN . LP RP option_nl LBRACE stmt_list RBRACE option_nl  (1)

	LP  shift 5
	.  error


state 3
	$accept : program . $end  (0)

	$end  accept


state 4
	program : error NL .  (2)

	.  reduce 2


state 5
	program : MAIN LP . RP option_nl LBRACE stmt_list RBRACE option_nl  (1)

	RP  shift 6
	.  error


state 6
	program : MAIN LP RP . option_nl LBRACE stmt_list RBRACE option_nl  (1)
	option_nl : .  (3)

	NL  shift 7
	LBRACE  reduce 3

	option_nl  goto 8


7: shift/reduce conflict (shift 7, reduce 3) on NL
state 7
	option_nl : NL . option_nl  (4)
	option_nl : .  (3)

	NL  shift 7
	$end  reduce 3
	error  reduce 3
	IF  reduce 3
	FOR  reduce 3
	WHILE  reduce 3
	DO  reduce 3
	FUNCTION_DEF  reduce 3
	RETURN  reduce 3
	BOOLEAN_TYPE  reduce 3
	INT_TYPE  reduce 3
	STRING_TYPE  reduce 3
	CHAR_TYPE  reduce 3
	CONNECTION_TYPE  reduce 3
	TIMESTAMP_TYPE  reduce 3
	DOUBLE_TYPE  reduce 3
	TIMESTAMP_PF  reduce 3
	TEMPERATURE_PF  reduce 3
	HUMIDITY_PF  reduce 3
	AIR_PRESSURE_PF  reduce 3
	AIR_QUALITY_PF  reduce 3
	LIGHT_PF  reduce 3
	SOUND_LEVEL_PF  reduce 3
	LP  reduce 3
	LBRACE  reduce 3
	SINGLE_LINE_COMMENT  reduce 3
	INCREMENT_OP  reduce 3
	DECREMENT_OP  reduce 3
	ESTABLISH_CONN_PF  reduce 3
	IDENTIFIER  reduce 3

	option_nl  goto 9


state 8
	program : MAIN LP RP option_nl . LBRACE stmt_list RBRACE option_nl  (1)

	LBRACE  shift 10
	.  error


state 9
	option_nl : NL option_nl .  (4)

	.  reduce 4


state 10
	program : MAIN LP RP option_nl LBRACE . stmt_list RBRACE option_nl  (1)

	error  shift 11
	IF  shift 12
	FOR  shift 13
	WHILE  shift 14
	DO  shift 15
	FUNCTION_DEF  shift 16
	RETURN  shift 17
	BOOLEAN_TYPE  shift 18
	INT_TYPE  shift 19
	STRING_TYPE  shift 20
	CHAR_TYPE  shift 21
	CONNECTION_TYPE  shift 22
	TIMESTAMP_TYPE  shift 23
	DOUBLE_TYPE  shift 24
	TIMESTAMP_PF  shift 25
	TEMPERATURE_PF  shift 26
	HUMIDITY_PF  shift 27
	AIR_PRESSURE_PF  shift 28
	AIR_QUALITY_PF  shift 29
	LIGHT_PF  shift 30
	SOUND_LEVEL_PF  shift 31
	NL  shift 32
	SINGLE_LINE_COMMENT  shift 33
	INCREMENT_OP  shift 34
	DECREMENT_OP  shift 35
	ESTABLISH_CONN_PF  shift 36
	IDENTIFIER  shift 37
	.  error

	stmt_list  goto 38
	stmt  goto 39
	matched  goto 40
	unmatched  goto 41
	non_if_stmt  goto 42
	decrement_expr  goto 43
	increment_expr  goto 44
	declaration_expr  goto 45
	return_expr  goto 46
	assignment_expr  goto 47
	loop_expr  goto 48
	define_fcn  goto 49
	fcn_call_expr  goto 50
	primitive_function_expr  goto 51
	decrement_operation  goto 52
	increment_operation  goto 53
	fcn_name  goto 54
	var_type  goto 55
	while_loop  goto 56
	do_while_loop  goto 57
	for_loop  goto 58
	assignment_expr_no_sc  goto 59
	fcn_call  goto 60
	primitive_functions  goto 61
	get_timestamp  goto 62
	get_temperature  goto 63
	get_humidity  goto 64
	get_air_pressure  goto 65
	get_air_quality  goto 66
	get_light  goto 67
	get_sound_level  goto 68
	send  goto 69
	read  goto 70
	establish_connection  goto 71


state 11
	stmt : error . NL  (9)

	NL  shift 72
	.  error


state 12
	matched : IF . LP boolean_list RP option_nl matched ELSE option_nl matched  (10)
	unmatched : IF . LP boolean_list RP option_nl stmt  (12)
	unmatched : IF . LP boolean_list RP option_nl matched ELSE option_nl unmatched  (13)

	LP  shift 73
	.  error


state 13
	for_loop : FOR . option_nl LP for_expr RP option_nl LBRACE stmt_list RBRACE  (42)
	option_nl : .  (3)

	NL  shift 7
	LP  reduce 3

	option_nl  goto 74


state 14
	while_loop : WHILE . option_nl LP boolean_list RP option_nl LBRACE stmt_list RBRACE  (40)
	option_nl : .  (3)

	NL  shift 7
	LP  reduce 3

	option_nl  goto 75


state 15
	do_while_loop : DO . option_nl LBRACE stmt_list RBRACE option_nl WHILE option_nl LP boolean_list RP SEMICOLON  (41)
	option_nl : .  (3)

	NL  shift 7
	LBRACE  reduce 3

	option_nl  goto 76


state 16
	define_fcn : FUNCTION_DEF . fcn_return_type fcn_name LP param_list RP option_nl LBRACE stmt_list RBRACE  (31)

	BOOLEAN_TYPE  shift 18
	INT_TYPE  shift 19
	STRING_TYPE  shift 20
	CHAR_TYPE  shift 21
	CONNECTION_TYPE  shift 22
	TIMESTAMP_TYPE  shift 23
	DOUBLE_TYPE  shift 24
	VOID  shift 77
	.  error

	fcn_return_type  goto 78
	var_type  goto 79


state 17
	return_expr : RETURN . return_stmt SEMICOLON  (95)
	return_stmt : .  (96)

	TIMESTAMP_PF  shift 25
	TEMPERATURE_PF  shift 26
	HUMIDITY_PF  shift 27
	AIR_PRESSURE_PF  shift 28
	AIR_QUALITY_PF  shift 29
	LIGHT_PF  shift 30
	SOUND_LEVEL_PF  shift 31
	LP  shift 80
	ESTABLISH_CONN_PF  shift 36
	INTEGER  shift 81
	DOUBLE  shift 82
	STRING  shift 83
	CHAR  shift 84
	IDENTIFIER  shift 85
	SEMICOLON  reduce 96

	fcn_name  goto 54
	math_stmt  goto 86
	str_stmt_return  goto 87
	num_comparable  goto 88
	return_stmt  goto 89
	term  goto 90
	fcn_call  goto 91
	primitive_functions  goto 92
	power  goto 93
	factor  goto 94
	get_timestamp  goto 62
	get_temperature  goto 63
	get_humidity  goto 64
	get_air_pressure  goto 65
	get_air_quality  goto 66
	get_light  goto 67
	get_sound_level  goto 68
	send  goto 69
	read  goto 70
	establish_connection  goto 71


state 18
	var_type : BOOLEAN_TYPE .  (90)

	.  reduce 90


state 19
	var_type : INT_TYPE .  (86)

	.  reduce 86


state 20
	var_type : STRING_TYPE .  (88)

	.  reduce 88


state 21
	var_type : CHAR_TYPE .  (87)

	.  reduce 87


state 22
	var_type : CONNECTION_TYPE .  (89)

	.  reduce 89


state 23
	var_type : TIMESTAMP_TYPE .  (91)

	.  reduce 91


state 24
	var_type : DOUBLE_TYPE .  (92)

	.  reduce 92


state 25
	get_timestamp : TIMESTAMP_PF . LP RP  (140)

	LP  shift 95
	.  error


state 26
	get_temperature : TEMPERATURE_PF . LP RP  (141)

	LP  shift 96
	.  error


state 27
	get_humidity : HUMIDITY_PF . LP RP  (142)

	LP  shift 97
	.  error


state 28
	get_air_pressure : AIR_PRESSURE_PF . LP RP  (143)

	LP  shift 98
	.  error


state 29
	get_air_quality : AIR_QUALITY_PF . LP RP  (144)

	LP  shift 99
	.  error


state 30
	get_light : LIGHT_PF . LP RP  (145)

	LP  shift 100
	.  error


state 31
	get_sound_level : SOUND_LEVEL_PF . LP frequency RP  (146)

	LP  shift 101
	.  error


state 32
	non_if_stmt : NL .  (24)

	.  reduce 24


state 33
	non_if_stmt : SINGLE_LINE_COMMENT .  (16)

	.  reduce 16


state 34
	increment_operation : INCREMENT_OP . IDENTIFIER  (30)

	IDENTIFIER  shift 102
	.  error


state 35
	decrement_operation : DECREMENT_OP . IDENTIFIER  (27)

	IDENTIFIER  shift 103
	.  error


state 36
	establish_connection : ESTABLISH_CONN_PF . LP str_stmt RP  (151)

	LP  shift 104
	.  error


state 37
	decrement_operation : IDENTIFIER . DECREMENT_OP  (26)
	increment_operation : IDENTIFIER . INCREMENT_OP  (29)
	assignment_expr_no_sc : IDENTIFIER . ASSIGN_OP assignment_operand  (53)
	fcn_name : IDENTIFIER .  (128)
	send : IDENTIFIER . DOT SEND_PF LP send_item RP  (147)
	read : IDENTIFIER . DOT READ_PF LP RP  (149)

	INCREMENT_OP  shift 105
	DECREMENT_OP  shift 106
	ASSIGN_OP  shift 107
	DOT  shift 108
	LP  reduce 128


state 38
	program : MAIN LP RP option_nl LBRACE stmt_list . RBRACE option_nl  (1)

	RBRACE  shift 109
	.  error


state 39
	stmt_list : stmt .  (5)
	stmt_list : stmt . stmt_list  (6)

	error  shift 11
	IF  shift 12
	FOR  shift 13
	WHILE  shift 14
	DO  shift 15
	FUNCTION_DEF  shift 16
	RETURN  shift 17
	BOOLEAN_TYPE  shift 18
	INT_TYPE  shift 19
	STRING_TYPE  shift 20
	CHAR_TYPE  shift 21
	CONNECTION_TYPE  shift 22
	TIMESTAMP_TYPE  shift 23
	DOUBLE_TYPE  shift 24
	TIMESTAMP_PF  shift 25
	TEMPERATURE_PF  shift 26
	HUMIDITY_PF  shift 27
	AIR_PRESSURE_PF  shift 28
	AIR_QUALITY_PF  shift 29
	LIGHT_PF  shift 30
	SOUND_LEVEL_PF  shift 31
	NL  shift 32
	SINGLE_LINE_COMMENT  shift 33
	INCREMENT_OP  shift 34
	DECREMENT_OP  shift 35
	ESTABLISH_CONN_PF  shift 36
	IDENTIFIER  shift 37
	RBRACE  reduce 5

	stmt_list  goto 110
	stmt  goto 39
	matched  goto 40
	unmatched  goto 41
	non_if_stmt  goto 42
	decrement_expr  goto 43
	increment_expr  goto 44
	declaration_expr  goto 45
	return_expr  goto 46
	assignment_expr  goto 47
	loop_expr  goto 48
	define_fcn  goto 49
	fcn_call_expr  goto 50
	primitive_function_expr  goto 51
	decrement_operation  goto 52
	increment_operation  goto 53
	fcn_name  goto 54
	var_type  goto 55
	while_loop  goto 56
	do_while_loop  goto 57
	for_loop  goto 58
	assignment_expr_no_sc  goto 59
	fcn_call  goto 60
	primitive_functions  goto 61
	get_timestamp  goto 62
	get_temperature  goto 63
	get_humidity  goto 64
	get_air_pressure  goto 65
	get_air_quality  goto 66
	get_light  goto 67
	get_sound_level  goto 68
	send  goto 69
	read  goto 70
	establish_connection  goto 71


state 40
	stmt : matched .  (7)

	.  reduce 7


state 41
	stmt : unmatched .  (8)

	.  reduce 8


state 42
	matched : non_if_stmt .  (11)

	.  reduce 11


state 43
	non_if_stmt : decrement_expr .  (14)

	.  reduce 14


state 44
	non_if_stmt : increment_expr .  (15)

	.  reduce 15


state 45
	non_if_stmt : declaration_expr .  (17)

	.  reduce 17


state 46
	non_if_stmt : return_expr .  (18)

	.  reduce 18


state 47
	non_if_stmt : assignment_expr .  (19)

	.  reduce 19


state 48
	non_if_stmt : loop_expr .  (20)

	.  reduce 20


state 49
	non_if_stmt : define_fcn .  (21)

	.  reduce 21


state 50
	non_if_stmt : fcn_call_expr .  (22)

	.  reduce 22


state 51
	non_if_stmt : primitive_function_expr .  (23)

	.  reduce 23


state 52
	decrement_expr : decrement_operation . SEMICOLON  (25)

	SEMICOLON  shift 111
	.  error


state 53
	increment_expr : increment_operation . SEMICOLON  (28)

	SEMICOLON  shift 112
	.  error


state 54
	fcn_call : fcn_name . LP param_list_no_type RP  (129)

	LP  shift 113
	.  error


state 55
	declaration_expr : var_type . IDENTIFIER SEMICOLON  (50)
	declaration_expr : var_type . assignment_expr  (51)

	IDENTIFIER  shift 114
	.  error

	assignment_expr  goto 115
	assignment_expr_no_sc  goto 59


state 56
	loop_expr : while_loop .  (37)

	.  reduce 37


state 57
	loop_expr : do_while_loop .  (38)

	.  reduce 38


state 58
	loop_expr : for_loop .  (39)

	.  reduce 39


state 59
	assignment_expr : assignment_expr_no_sc . SEMICOLON  (52)

	SEMICOLON  shift 116
	.  error


state 60
	fcn_call_expr : fcn_call . SEMICOLON  (111)

	SEMICOLON  shift 117
	.  error


state 61
	primitive_function_expr : primitive_functions . SEMICOLON  (112)

	SEMICOLON  shift 118
	.  error


state 62
	primitive_functions : get_timestamp .  (130)

	.  reduce 130


state 63
	primitive_functions : get_temperature .  (131)

	.  reduce 131


state 64
	primitive_functions : get_humidity .  (132)

	.  reduce 132


state 65
	primitive_functions : get_air_pressure .  (133)

	.  reduce 133


state 66
	primitive_functions : get_air_quality .  (134)

	.  reduce 134


state 67
	primitive_functions : get_light .  (135)

	.  reduce 135


state 68
	primitive_functions : get_sound_level .  (136)

	.  reduce 136


state 69
	primitive_functions : send .  (137)

	.  reduce 137


state 70
	primitive_functions : read .  (138)

	.  reduce 138


state 71
	primitive_functions : establish_connection .  (139)
	send : establish_connection . DOT SEND_PF LP send_item RP  (148)
	read : establish_connection . DOT READ_PF LP RP  (150)

	DOT  shift 119
	AND_OP  reduce 139
	OR_OP  reduce 139
	GREATER_OP  reduce 139
	LESS_OP  reduce 139
	GREAT_OR_EQUAL_OP  reduce 139
	LESS_OR_EQUAL_OP  reduce 139
	EQUALITY_OP  reduce 139
	NOT_EQUALITY_OP  reduce 139
	RP  reduce 139
	SEMICOLON  reduce 139
	PLUS_OP  reduce 139
	MINUS_OP  reduce 139
	DIV_OP  reduce 139
	MULT_OP  reduce 139
	POWER_OP  reduce 139
	MODULO_OP  reduce 139


state 72
	stmt : error NL .  (9)

	.  reduce 9


state 73
	matched : IF LP . boolean_list RP option_nl matched ELSE option_nl matched  (10)
	unmatched : IF LP . boolean_list RP option_nl stmt  (12)
	unmatched : IF LP . boolean_list RP option_nl matched ELSE option_nl unmatched  (13)

	TRUE_LITERAL  shift 120
	FALSE_LITERAL  shift 121
	NEGATION_OP  shift 122
	TIMESTAMP_PF  shift 25
	TEMPERATURE_PF  shift 26
	HUMIDITY_PF  shift 27
	AIR_PRESSURE_PF  shift 28
	AIR_QUALITY_PF  shift 29
	LIGHT_PF  shift 30
	SOUND_LEVEL_PF  shift 31
	LP  shift 123
	ESTABLISH_CONN_PF  shift 36
	INTEGER  shift 81
	DOUBLE  shift 82
	STRING  shift 124
	CHAR  shift 84
	IDENTIFIER  shift 125
	.  error

	boolean_list  goto 126
	fcn_name  goto 54
	math_stmt  goto 86
	and_term  goto 127
	boolean_factor  goto 128
	boolean_expr  goto 129
	boolean_no_math  goto 130
	boolean_literal  goto 131
	num_compr_expr  goto 132
	string_compr_expr  goto 133
	num_comparable  goto 134
	str_stmt  goto 135
	term  goto 90
	fcn_call  goto 91
	primitive_functions  goto 92
	power  goto 93
	factor  goto 94
	get_timestamp  goto 62
	get_temperature  goto 63
	get_humidity  goto 64
	get_air_pressure  goto 65
	get_air_quality  goto 66
	get_light  goto 67
	get_sound_level  goto 68
	send  goto 69
	read  goto 70
	establish_connection  goto 71


state 74
	for_loop : FOR option_nl . LP for_expr RP option_nl LBRACE stmt_list RBRACE  (42)

	LP  shift 136
	.  error


state 75
	while_loop : WHILE option_nl . LP boolean_list RP option_nl LBRACE stmt_list RBRACE  (40)

	LP  shift 137
	.  error


state 76
	do_while_loop : DO option_nl . LBRACE stmt_list RBRACE option_nl WHILE option_nl LP boolean_list RP SEMICOLON  (41)

	LBRACE  shift 138
	.  error


state 77
	fcn_return_type : VOID .  (36)

	.  reduce 36


state 78
	define_fcn : FUNCTION_DEF fcn_return_type . fcn_name LP param_list RP option_nl LBRACE stmt_list RBRACE  (31)

	IDENTIFIER  shift 139
	.  error

	fcn_name  goto 140


state 79
	fcn_return_type : var_type .  (35)

	.  reduce 35


state 80
	factor : LP . math_stmt RP  (124)
